[package]
name = "gatekeeper-pam"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
gatekeeper-core = "0.2.1"
serde_json = "1.0.64"
serde = { version = "1.0.195", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
toml = "0.5"

[build-dependencies]
bindgen = "0.72.1"

[[bin]]
name = "gatekeeperd"
path = "src/bin/gatekeeperd.rs"
